Revise README for 2-Player Pong game
Updated game title, added features, controls, gameplay, tech stack, project structure, requirements, and running instructions.